@@ -3,6 +3,7 @@ Unreleased
 Changed
     SNAP: Update to PHP 7.4
     Use cron method instead of every* methods in cronjob definitions (#503)
+    Use fbirlik/sqlite3 PPA in snap build for newer version of sqlite3 (#507)
 
 0.14.1 - 15/05/2022
 
